--- a/variables.env
+++ b/variables.env
@@ -1,2 +1,2 @@
 SECRETA=palabrasecreta;
-DB_MONGO=mongodb+srv://GarMaCodes:SIMhaselyn2003dis@cluster0.fty6x.mongodb.net/gestor_de_proyectos
+DB_MONGO=mongodb+srv://GarMaCodes:SIMhaselyn2003dis@cluster0.fty6x.mongodb.net/GESTOR_DE_PROYECTOS
